--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-load-drink",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This is an API REST server that is made to manage the amount of drinks to load. This application is developed with node.js.",
   "main": "index.js",
   "scripts": {
@@ -18,5 +18,9 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "mongoose": "^6.7.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14"
   }
 }
