--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
