--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ts-load-drink",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is an API REST server that is made to manage the amount of drinks to load. This application is developed with node.js.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm ./dist/app.js",
+    "start": "node ./dist/app.js",
     "build": "tsc",
     "v-patch": "npm version patch --no-git-tag-version --force",
     "v-minor": "npm version minor --no-git-tag-version --force",
